--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,27 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.2
+
+  uuid: 3.0.4
+  hive: ^2.2.3
+  shared_preferences: ^2.0.15
+  path_provider: ^2.0.2
+
   flutter_nfc_reader:
     git:
       url: https://github.com/semakers/flutter-nfc-reader.git
       ref: master
 
-  cupertino_icons: ^1.0.2
+  rxdart: ^0.27.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  json_serializable: ^6.1.4
+  hive_generator: ^1.1.0
+  build_runner: ^2.0.4
 
   flutter_lints: ^2.0.0
 
