--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,14 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  animated_gesture_detector: ^1.0.0
+
   uuid: 3.0.4
   hive: ^2.2.3
   shared_preferences: ^2.0.15
   path_provider: ^2.0.2
 
-  flutter_nfc_reader:
-    git:
-      url: https://github.com/semakers/flutter-nfc-reader.git
-      ref: master
+  nfc_manager: ^3.1.1
 
   rxdart: ^0.27.3
 
