--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.0.15
   path_provider: ^2.0.2
 
+  nfc_emulator: ^2.0.0-nullsafety.0
   nfc_manager: ^3.1.1
 
   rxdart: ^0.27.3
